# qtads

./: .clang-format  .gitignore  .nojekyll  .travis.yml  AUTHORS  BUGS  CREDITS  HTML_TADS_LICENSE  INSTALL  INSTALL.md  Info.plist  NEWS  PORTABILITY  QTADS_LICENSE_NOTE  QTads.icns  QTadsGameFile.icns  README  SOURCE_README  TIPS  TODO  appimage_apprun_wrapper  appimage_openssl_hook  currentversion  gpl-2.0-standalone.html  images.qrc  index.html  old_index.html  qtads.pro  qtads.rc  resources.qrc  soundfont.sf2  style.css  w32_linkscript
.circleci/: config.yml
.github/workflows/: main.yml
SDL_audiolib/: .clang-format  .gitattributes  .gitignore  .gitrepo  CMakeLists.txt  README.md  SDL_audiolib.pc.in  aulib_config.h  aulib_config.h.in  aulib_version.h  aulib_version.h.in
SDL_audiolib/.github/workflows/: ci.yml
SDL_audiolib/doxygen/: Doxyfile.in  mainpage.dox
SDL_audiolib/example/: main.cpp
SDL_audiolib/include/: aulib.h  aulib_global.h
SDL_audiolib/include/Aulib/: AudioDecoder.h  AudioDecoderAdlmidi.h  AudioDecoderBassmidi.h  AudioDecoderFluidsynth.h  AudioDecoderModplug.h  AudioDecoderMpg123.h  AudioDecoderMusepack.h  AudioDecoderOpenmpt.h  AudioDecoderOpus.h  AudioDecoderSndfile.h  AudioDecoderVorbis.h  AudioDecoderWildmidi.h  AudioDecoderXmp.h  AudioResampler.h  AudioResamplerSox.h  AudioResamplerSpeex.h  AudioResamplerSrc.h  AudioStream.h  Decoder.h  DecoderAdlmidi.h  DecoderBassmidi.h  DecoderDrflac.h  DecoderDrmp3.h  DecoderDrwav.h  DecoderFlac.h  DecoderFluidsynth.h  DecoderModplug.h  DecoderMpg123.h  DecoderMusepack.h  DecoderOpenmpt.h  DecoderOpus.h  DecoderSndfile.h  DecoderVorbis.h  DecoderWildmidi.h  DecoderXmp.h  Processor.h  Resampler.h  ResamplerSdl.h  ResamplerSox.h  ResamplerSpeex.h  (+2 more)
SDL_audiolib/resampler/: README
SDL_audiolib/src/: AudioDecoder.cpp  AudioDecoderAdlmidi.cpp  AudioDecoderBassmidi.cpp  AudioDecoderFluidsynth.cpp  AudioDecoderModplug.cpp  AudioDecoderMpg123.cpp  AudioDecoderMusepack.cpp  AudioDecoderOpenmpt.cpp  AudioDecoderOpus.cpp  AudioDecoderSndfile.cpp  AudioDecoderVorbis.cpp  AudioDecoderWildmidi.cpp  AudioDecoderXmp.cpp  AudioResampler.cpp  AudioResamplerSox.cpp  AudioResamplerSpeex.cpp  AudioResamplerSrc.cpp  AudioStream.cpp  Buffer.h  Decoder.cpp  DecoderAdlmidi.cpp  DecoderBassmidi.cpp  DecoderDrflac.cpp  DecoderDrmp3.cpp  DecoderDrwav.cpp  DecoderFlac.cpp  DecoderFluidsynth.cpp  DecoderModplug.cpp  DecoderMpg123.cpp  DecoderMusepack.cpp  DecoderOpenmpt.cpp  DecoderOpus.cpp  DecoderSndfile.cpp  DecoderVorbis.cpp  DecoderWildmidi.cpp  DecoderXmp.cpp  Processor.cpp  Resampler.cpp  ResamplerSdl.cpp  ResamplerSox.cpp  (+19 more)
SDL_audiolib/src/missing/: algorithm.h  missing.h  sdl_audio_format.h  sdl_endian_float.h  sdl_load_file_rw.c  sdl_load_file_rw.h  sdl_rwsize.c  sdl_rwsize.h
SDL_audiolib/src/sdl_mixer_emu/: music.cpp  sdl_mixer_emu.cpp
desktop/applications/: nikos.chantziaras.qtads.desktop
desktop/man/man6/: qtads.6
desktop/metainfo/: nikos.chantziaras.qtads.appdata.xml
htmltads/: html_os.h  htmlattr.h  htmldb2.cpp  htmldb3.cpp  htmldbg.cpp  htmldc3.cpp  htmldcfg.cpp  htmldisp.cpp  htmldisp.h  htmlfmt.cpp  htmlfmt.h  htmlhash.cpp  htmlhash.h  htmlinp.cpp  htmlinp.h  htmlprs.cpp  htmlprs.h  htmlrf.cpp  htmlrf.h  htmlsnd.cpp  htmlsnd.h  htmlsys.h  htmltags.cpp  htmltags.h  htmltxar.cpp  htmltxar.h  htmlver.h  oshtml.cpp  tadshtml.cpp  tadshtml.h
htmltads/notes/: changes.htm  compat.htm  porting.htm
share/applications/: qtads.desktop
src/: aboutqtadsdialog.cc  aboutqtadsdialog.h  aboutqtadsdialog.ui  aulib_export.h  aulib_version.h  bannerlayout.cc  bannerlayout.h  charmap.cc  confdialog.cc  confdialog.h  confdialog.ui  config.h  dispwidget.cc  dispwidget.h  dispwidgetinput.cc  dispwidgetinput.h  gameinfodialog.cc  gameinfodialog.h  gameinfodialog.ui  globals.cc  globals.h  h_qt.h  h_qt_le.h  hos_qt.cc  hos_qt.h  hos_w32.h  htmlqt.cc  htmlqt.h  kcolorbutton.cc  kcolorbutton.h  main.cc  missing.cc  missing.h  oemqt.c  osnetwin.h  osqt.cc  osqt.h  qtadscharmap.cc  qtadscharmap.h  qtadsconfdialog.cpp  (+55 more)
tads2/: argize.c  h_ix86_64.h  os.h  osifc.h  osnoui.c  ostzposix.c  output.c  trd.c
tads2/msdos/: ostzw32.c  tz_w32.c  windowsZones.h
tads3/: askf_os3.cpp  charmap.cpp  gameinfo.cpp  indlg_os3.cpp  osifcnet.h  resfind.cpp  std.cpp  t3std.h  tcerrmsg.cpp  tcpndrv.h  tcprs.cpp  tcprs.h  tcprsstm.cpp  tct3.cpp  tct3stm.cpp  tctok.cpp  tctok.h  vmbifregx.cpp  vmbiftad.cpp  vmbiftio.cpp  vmbiftix.cpp  vmbiftix.h  vmconsol.cpp  vmdynfunc.cpp  vmfilobj.cpp  vmfref.cpp  vmglob.h  vmgram.cpp  vmhost.h  vmimage.cpp  vminit.cpp  vminitfl.cpp  vmnet.h  vmobj.h  vmpack.cpp  vmpool.cpp  vmpoolfl.cpp  vmrefcnt.h  vmrun.cpp  vmstack.h  (+5 more)
